# inverted-index

./: CMakeLists.txt  README.md  main.c  rank.c  rank.h
data/: dataset_10.json  dataset_5k.json
io/: filereader.c  filereader.h  parser.c  parser.h
structure/: document.c  document.h  hash.c  hash.h  trie.c  trie.h  vector.c  vector.h
